# ctpapi2python

./: CMakeLists.txt  README.md  auto_compile.bat  thostmduserapi.i
windows/: thosttraderapi.i
windows/_thostmduserapi/: _thostmduserapi.sln  _thostmduserapi.vcxproj  _thostmduserapi.vcxproj.filters
windows/_thosttraderapi/: _thosttraderapi.sln  _thosttraderapi.vcxproj  _thosttraderapi.vcxproj.filters
